# nonebot-plugin-maimai-helper

./: LICENSE  README.md  __init__.py  data.py  pyproject.toml
game_data/: chara_list.json  icon_list.json  partner_list.json  plate_list.json  title_list.json
helper/: simai.py
manager/: game_data.py  usage_count.py
nonebot_plugin_maimai_helper/: __init__.py  data.py  update_music_list.py
nonebot_plugin_maimai_helper/game_data/: diving_music_list.json  frame_list.json  music_alias_list.json  music_list.json
nonebot_plugin_maimai_helper/helper/: diving_fish.py  simai.py
nonebot_plugin_maimai_helper/manager/: game_data.py
nonebot_plugin_maimai_helper/util/: utils.py
nonebot_plugin_maimai_helper/util/net/: HTTPRequest.py  crypto.py
util/net/: HTTPRequest.py  SocketHttps.py  crypto.py
